# GeekCode

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
Formula/: geekcode.rb
benchmarks/: __init__.py  evaluate.py  metrics.yaml  models.py  report.py  runner.py  seed_results.py
benchmarks/coding/: expected.md  task.md
benchmarks/coding/data/: api_client.py  calculator.py  data_processor.py  database.py  file_handler.py  test_calculator.py  user_service.py
benchmarks/finance/: expected.md  task.md
benchmarks/finance/data/: questions.yaml  regulations.md
benchmarks/general/: expected.md  task.md
benchmarks/general/data/: puzzle.md  research_template.md  sources.yaml  validation_rules.yaml  workflow_config.yaml
benchmarks/healthcare/: expected.md  task.md
benchmarks/healthcare/data/: exclusion_template.yaml  scenarios.yaml
docs/: decision_rules.yaml
docs/benchmarks/: report.md
geekcode/: __init__.py
geekcode/cli/: __init__.py  completer.py  main.py
geekcode/core/: __init__.py  agent.py  cache.py  coding_loop.py  context.py  workspace_query.py
geekcode/mcporter/: __init__.py  executor.py  registry.py  schema.py  transport.py
geekcode/providers/: __init__.py  base.py
geekcode/rag/: __init__.py  chunking.py  embedding.py  retrieval.py
geekcode/rlm/: __init__.py  processor.py
geekcode/state/: __init__.py  engine.py
geekcode/validation/: __init__.py  config.py
geekcode/workflows/: __init__.py  engine.py
install/: install.ps1  install.sh  uninstall.sh
tests/: __init__.py  test_coding_loop.py  test_config.py  test_state.py  test_workspace_query.py
winget/manifests/s/sur950/GeekCode/1.0.0/: sur950.GeekCode.installer.yaml  sur950.GeekCode.locale.en-US.yaml  sur950.GeekCode.yaml
